--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @font-face {
-    font-family: Comfortaa;
-    src: url(Comfortaa-Regular.ttf);
+    font-family: Inconsolata;
+    src: url(Inconsolata-Regular.ttf);
 }
 
 #particles-js {
@@ -22,7 +22,7 @@
 html,
 body {
     height: 100%;
-    font-family: Comfortaa;
+    font-family: Inconsolata;
 }
 
 .menu {
