--- a/css/style.css
+++ b/css/style.css
@@ -139,7 +139,7 @@ html::-webkit-scrollbar-thumb {
 
 .sobre h2 {
     text-align: left;
-    padding-top: 4%;
+    padding-top: 5.5%;
     padding-bottom: 15px;
     margin-left: 15%;
 }
@@ -171,7 +171,7 @@ p.cardSobre {
 }
 
 #h2Valor {
-    transform: translateY(-65%);
+    transform: translateY(-16vh);
     text-align: left;
     padding-bottom: 15px;
     margin-left: 80%;
@@ -179,14 +179,14 @@ p.cardSobre {
 
 
 div.valor1 {
-    background-color: #000;
+    position: relative;
+    transform: translateY(-15vh);
     color: #ffffff;
     text-align: center;
     margin-left: 65%;   
 }
 
-.tag1 {
-    transform: translateY(-100%);
+.tag1Valor1 {
     padding-left: 12px;
     padding-top: 2px;
     padding-right: 12px;
@@ -199,8 +199,7 @@ div.valor1 {
 }
 
 
-.tag2 {
-    transform: translateY(-100%);
+.tag2Valor1 {
     width: 45%;
     padding-top: 2px;
     background-color: #ffffff;
@@ -211,6 +210,77 @@ div.valor1 {
     border-width: 2px;
     
 }
+
+
+div.valor2 {
+    position: relative;
+    transform: translateY(-10vh);
+    color: #ffffff;
+    text-align: center;
+    margin-left: 68%;   
+    padding-top: 55px;
+}
+
+.tag1Valor2 {
+    padding-left: 12px;
+    padding-top: 2px;
+    padding-right: 12px;
+    float: left; 
+    background-color: #000;
+    border-color: #000;
+    border-style: solid;
+    border-width: 2px;
+    box-shadow: 0 15px 20px 0 rgba(0, 0, 0, 0.6), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+
+.tag2Valor2 {
+    width: 45%;
+    padding-top: 2px;
+    background-color: #ffffff;
+    color: #000;
+    float: left;
+    border-color: #000;
+    border-style: solid;
+    border-width: 2px;
+    
+}
+
+
+div.valor3 {
+    background-color: #000;
+    color: #ffffff;
+    text-align: center;
+    margin-left: 65%;   
+}
+
+.tag1Valor3 {
+    transform: translateY(-150%);
+    padding-left: 12px;
+    padding-top: 2px;
+    padding-right: 12px;
+    float: left; 
+    background-color: #000;
+    border-color: #000;
+    border-style: solid;
+    border-width: 2px;
+    box-shadow: 0 15px 20px 0 rgba(0, 0, 0, 0.6), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+
+.tag2Valor3 {
+    transform: translateY(-150%);
+    width: 45%;
+    padding-top: 2px;
+    background-color: #ffffff;
+    color: #000;
+    float: left;
+    border-color: #000;
+    border-style: solid;
+    border-width: 2px;
+    
+}
+
 
 
 #h2missao {
